--- a/python_stack/django/django_full_stack/index.html
+++ b/python_stack/django/django_full_stack/index.html
@@ -1,20 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Demo: Lazy Loader</title>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <style>
+        #myScroll {
+            border: 1px solid #999;
+        }
+
+        p {
+            border: 1px solid #ccc;
+            padding: 50px;
+            text-align: center;
+        }
+
+        .loading {
+            color: red;
+        }
+        .dynamic {
+            background-color:#ccc;
+            color:#000;
+        }
+    </style>
+    <script>
+		var counter=0;
+        $(window).scroll(function () {
+            if ($(window).scrollTop() == $(document).height() - $(window).height() && counter < 2) {
+                appendData();
+            }
+        });
+        function appendData() {
+            var html = '';
+            for (i = 0; i < 10; i++) {
+                html += '<p class="dynamic">Dynamic Data :  This is test data.<br />Next line.</p>';
+            }
+            $('#myScroll').append(html);
+            counter++;
+
+            if(counter==2) {
+                $('#myScroll').append('<button id="uniqueButton" style="margin-left: 50%; background-color: powderblue;">Click</button><br /><br />');
+            }
+        }
+    </script>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-        <div class="col"></div>
-        <div class="content col-2" style="border: 1px solid black; text-align: center; ">
-            <h5>Hello World!</h5>
-        </div>
-        <div class="col"></div>
-        </div>
+    <div id="myScroll">
+        <p>
+            Contents will load here!!!.<br />
+        </p>
+        <p >This is test data.<br />Next line.</p>
+        <p >This is test data.<br />Next line.</p>
+        <p >This is test data.<br />Next line.</p>
+        <p >This is test data.<br />Next line.</p>
+        <p >This is test data.<br />Next line.</p>
+        <p >This is test data.<br />Next line.</p>
+        <p >This is test data.<br />Next line.</p>
+        <p >This is test data.<br />Next line.</p>
+        <p >This is test data.<br />Next line.</p>
+        <p >This is test data.<br />Next line.</p>
+        <p >This is test data.<br />Next line.</p>
+        <p >This is test data.<br />Next line.</p>
+        <p >This is test data.<br />Next line.</p>
+        <p >This is test data.<br />Next line.</p>
+        <p >This is test data.<br />Next line.</p>
+        <p >This is test data.<br />Next line.</p>
+        <p >This is test data.<br />Next line.</p>
+        <p >This is test data.<br />Next line.</p>
+        <p >This is test data.<br />Next line.</p>
+        <p >This is test data.<br />Next line.</p>
+        <p >This is test data.<br />Next line.</p>
+        <p >This is test data.<br />Next line.</p>
     </div>
 </body>
 </html>
