--- a/python_stack/django/django_full_stack/index.html
+++ b/python_stack/django/django_full_stack/index.html
@@ -15,6 +15,8 @@
             background-color: white;
         }
         .jumbotron {
+            width: 100%;
+            height: 100vh;
             background: url('headpic2.jpg') no-repeat center center fixed;
             padding-top: 20%;
             padding-bottom: 25%;
@@ -26,6 +28,10 @@
             /* min-width: 100%;
             min-height: 100%; */
         }
+        /* .head-container {
+            width: 100%;
+            height: 0vh;
+        } */
         /* img {
             max-height: 400px;
             width: 100%;
